--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ GitPython==3.1.40
 gunicorn==21.2.0
 idna==3.6
 importlib-metadata==6.11.0
+iniconfig==2.0.0
 ipython==8.20.0
 itsdangerous==2.1.2
 jedi==0.19.1
@@ -45,6 +46,7 @@ parso==0.8.3
 Pillow==10.1.0
 platformdirs==4.1.0
 plotly==5.18.0
+pluggy==1.3.0
 prompt-toolkit==3.0.43
 protobuf==4.25.1
 psutil==5.9.7
@@ -53,6 +55,7 @@ pyarrow==14.0.2
 pydeck==0.8.1b0
 Pygments==2.17.2
 pyparsing==3.1.1
+pytest==7.4.4
 python-dateutil==2.8.2
 pytz==2023.3.post1
 pywin32==306
