--- a/requirements.txt
+++ b/requirements.txt
@@ -38,7 +38,7 @@ matplotlib==3.8.2
 matplotlib-inline==0.1.6
 mdurl==0.1.2
 nest-asyncio==1.5.8
-numba==0.58.1
+numba==0.58.1; python_version >= "3.8" and python_version < "3.12"
 numpy==1.26.2
 packaging==23.2
 pandas==2.1.4
